syntax = "proto3";
package api.user;

option go_package = "shopping/api/user;user_pb";
//go:generate protoc -I
service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message GetUserRequest {
  int64 id = 1;
}
message GetUserResponse {
  User user = 1;
}
message User{
  int64 id = 1;
  string name = 2;
  string address = 3;
  string telephone = 4;
  string birthday = 5;
  string deleted_at = 6;
}

message CreateUserRequest {
  string name = 1;
  string address = 2;
  string telephone = 3;
}

message CreateUserResponse {
  int64 id = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string address = 3;
  string telephone = 4;
  string birthday = 5;
  string deleted_at = 6;
}

message UpdateUserResponse {
  int64 id = 1;
}
message DeleteUserRequest {
  int64 id = 1;
}
message DeleteUserResponse {
  int64 id = 1;
}